--- a/public/v/a/index.html
+++ b/public/v/a/index.html
@@ -239,9 +239,9 @@
   <section class="hero" data-block="hero">
   <div class="hero__container">
     <div class="hero__content">
-      <h1 class="hero__title">Психолог онлайн. Помогаю справиться с сильной тревогой и вернуть спокойствие.</h1>
+      <h1 class="hero__title">Тревога мешает жить. Я помогу это изменить.</h1>
 
-      <p class="hero__subtitle">Структурная работа в КПТ-подходе: понятные шаги, практические упражнения и поддержка. Помогу разобраться в причинах беспокойства и научиться управлять своим состоянием.</p>
+      <p class="hero__subtitle">Психолог онлайн. Работаю с тревогой методом КПТ — научно обоснованный подход с конкретными результатами.</p>
 
       <div class="hero__badges">
         <span class="badge">Конфиденциально</span>
@@ -1186,7 +1186,7 @@
   
   
   
-  <script src="http://localhost:1313/js/ab-test.min.d8f8a752169570eabc36875bdff6caab13dd26176b1a99ecf9d2d4cc980867ef.js" integrity="sha256-2PinUhaVcOq8Nodb3/bKqxPdJhdrGpns&#43;dLUzJgIZ&#43;8="></script>
+  <script src="http://localhost:1313/js/ab-test.min.8cd132dbb5ad9363235bda950933b7fa69fd310a20ffa2830a2e20e7d0edc335.js" integrity="sha256-jNEy27Wtk2MjW9qVCTO3&#43;mn9MQog/6KDCi4g59DtwzU="></script>
   
 
   
