--- a/public/v/b/index.html
+++ b/public/v/b/index.html
@@ -150,10 +150,9 @@
   <section class="hero" data-block="hero">
     <div class="hero__container">
       <div class="hero__content">
-        <h1 class="hero__title">Представьте: вы просыпаетесь с ощущением ясности и легкости.</h1>
+        <h1 class="hero__title">Тревога не отпускает. Есть выход.</h1>
 
-        <p class="hero__subtitle">Это возможно при последовательной работе с психологом. В подходе КПТ мы не просто
-          говорим, а внедряем конкретные навыки, которые помогают справляться с тревогой в реальной жизни.</p>
+        <p class="hero__subtitle">Онлайн-психолог, метод КПТ. Конкретные навыки вместо бесконечных разговоров.</p>
 
         <div class="hero__badges">
           <span class="badge">Конфиденциально</span>
@@ -887,7 +886,7 @@
   
   
   
-  <script src="http://localhost:1313/js/ab-test.min.d8f8a752169570eabc36875bdff6caab13dd26176b1a99ecf9d2d4cc980867ef.js" integrity="sha256-2PinUhaVcOq8Nodb3/bKqxPdJhdrGpns&#43;dLUzJgIZ&#43;8="></script>
+  <script src="http://localhost:1313/js/ab-test.min.8cd132dbb5ad9363235bda950933b7fa69fd310a20ffa2830a2e20e7d0edc335.js" integrity="sha256-jNEy27Wtk2MjW9qVCTO3&#43;mn9MQog/6KDCi4g59DtwzU="></script>
   
 
   
