themes, random variant

--- a/public/v/a/index.html
+++ b/public/v/a/index.html
@@ -11,7 +11,7 @@
   
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&family=Nunito:wght@400;500;600;700&family=Outfit:wght@300;400;500;600;700&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500&display=swap" rel="stylesheet">
   <meta name="description"
     content="Психолог онлайн. Помощь при тревоге методом КПТ — структурированный подход с практическими техниками. Консультации онлайн, конфиденциально.">
   <meta name="keywords"
@@ -181,21 +181,15 @@
   
   
   
-  <link rel="stylesheet" href="http://localhost:1313/css/main.min.361a8944e5f62995ac99f99595cc4ecee167d51f45a6bf44c7551aa055ec7f03.css" integrity="sha256-NhqJROX2KZWsmfmVlcxOzuFn1R9Fpr9Ex1UaoFXsfwM=">
+  
+  
+  <link rel="stylesheet" href="http://localhost:1313/css/bundle.min.efc08339dd22468159757d510d23dc149d09f42ebecb4c44ef895709d6223e86.css" integrity="sha256-78CDOd0iRoFZdX1RDSPcFJ0J9C6&#43;y0xE74lXCdYiPoY=">
   
 
   
   <style>
-     
     *{box-sizing:border-box;margin:0;padding:0}
-    html{font-size:16px}
-    body{margin:0;font-family:'Outfit',sans-serif;font-size:16px;line-height:1.65;color:var(--color-text,#2a2520);background-color:var(--color-bg,#faf9f7);-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}
-    .hero{padding:80px 16px 72px;background:var(--color-hero-bg,#2a2520);color:var(--color-hero-text,#f5f0ea);position:relative;overflow:hidden}
-    .hero__title{font-family:'Playfair Display',Georgia,serif;font-size:30px;font-weight:500;line-height:1.18;margin-bottom:20px;letter-spacing:-0.01em;color:var(--color-hero-text,#f5f0ea)}
-    .hero__subtitle{font-size:16px;line-height:1.7;margin-bottom:24px;opacity:0.7;color:var(--color-hero-text,#f5f0ea)}
-    .btn{display:inline-flex;align-items:center;justify-content:center;min-height:48px;padding:14px 32px;font-family:'Outfit',sans-serif;font-size:14px;font-weight:600;letter-spacing:0.06em;text-transform:uppercase;border:1.5px solid transparent;border-radius:6px;cursor:pointer;text-decoration:none;transition:all 0.35s cubic-bezier(0.4,0,0.2,1)}
-    .btn--primary{background-color:var(--color-gold,#c9a96e);color:var(--color-hero-bg,#2a2520);border-color:var(--color-gold,#c9a96e)}
-    .btn--secondary{background-color:transparent;color:var(--color-hero-text,#f5f0ea);border-color:rgba(245,240,234,0.3)}
+    body{margin:0;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}
   </style>
 
   
