--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,6 @@
     (function() {
       'use strict';
 
-      var STORAGE_KEY = 'landing_variant';
       var config = {
         variants: ["a","b"],
         weights: [50,50],
@@ -129,28 +128,14 @@
         if (isValidVariant(forced)) {
           variant = forced;
           source = 'forced';
-          try { localStorage.setItem(STORAGE_KEY, variant); } catch(e) {}
           trackAssignment(variant, source);
           redirect(variant);
           return;
         }
 
         
-        try {
-          var stored = localStorage.getItem(STORAGE_KEY);
-          if (isValidVariant(stored)) {
-            variant = stored;
-            source = 'stored';
-            trackAssignment(variant, source);
-            redirect(variant);
-            return;
-          }
-        } catch(e) {}
-
-        
         variant = weightedRandom(config.variants, config.weights);
-        source = 'assigned';
-        try { localStorage.setItem(STORAGE_KEY, variant); } catch(e) {}
+        source = 'random';
         trackAssignment(variant, source);
         redirect(variant);
       })();
