--- a/public/v/a/index.html
+++ b/public/v/a/index.html
@@ -1180,7 +1180,7 @@
   
   
   
-  <script src="http://localhost:1313/js/ab-test.min.8cd132dbb5ad9363235bda950933b7fa69fd310a20ffa2830a2e20e7d0edc335.js" integrity="sha256-jNEy27Wtk2MjW9qVCTO3&#43;mn9MQog/6KDCi4g59DtwzU="></script>
+  <script src="http://localhost:1313/js/ab-test.min.9c81d0f9204b82a1617a07fdb4ed4a734f896b18860279b242c004eff8e4ad96.js" integrity="sha256-nIHQ&#43;SBLgqFhegf9tO1Kc0&#43;JaxiGAnmyQsAE7/jkrZY="></script>
   
 
   
