--- a/public/v/a/index.html
+++ b/public/v/a/index.html
@@ -183,7 +183,7 @@
   
   
   
-  <link rel="stylesheet" href="http://localhost:1313/css/bundle.min.efc08339dd22468159757d510d23dc149d09f42ebecb4c44ef895709d6223e86.css" integrity="sha256-78CDOd0iRoFZdX1RDSPcFJ0J9C6&#43;y0xE74lXCdYiPoY=">
+  <link rel="stylesheet" href="http://localhost:1313/css/bundle.min.09aa845b453c2f10b7d30cce88cffcaefeda7b056f7754775f919086b94317cc.css" integrity="sha256-CaqEW0U8LxC30wzOiM/8rv7aewVvd1R3X5GQhrlDF8w=">
   
 
   
@@ -710,6 +710,10 @@
   <div class="container">
     <h2 class="section__title">Стоимость и форматы</h2>
 
+    <div class="pricing__promo">
+      <span class="pricing__promo-text">Специальная цена на индивидуальные консультации</span>
+    </div>
+
     <div class="pricing__cards">
       <div class="pricing-card">
         <div class="pricing-card__header">
@@ -717,8 +721,14 @@
         </div>
 
         <div class="pricing-card__price">
-          <span class="price__amount">5000</span>
-          <span class="price__currency">&nbsp;₽</span>
+          <div class="price__old">
+            <span class="price__old-amount">10 000</span>
+            <span class="price__old-currency">&nbsp;₽</span>
+          </div>
+          <div class="price__current">
+            <span class="price__amount">5000</span>
+            <span class="price__currency">&nbsp;₽</span>
+          </div>
         </div>
 
         <ul class="pricing-card__features">
@@ -746,9 +756,15 @@
         </div>
 
         <div class="pricing-card__price">
-          <span class="price__amount">45000</span>
-          <span class="price__currency">&nbsp;₽</span>
-          <div class="price__save">Экономия 5000&nbsp;₽ — одна сессия в подарок</div>
+          <div class="price__old">
+            <span class="price__old-amount">100 000</span>
+            <span class="price__old-currency">&nbsp;₽</span>
+          </div>
+          <div class="price__current">
+            <span class="price__amount">45000</span>
+            <span class="price__currency">&nbsp;₽</span>
+          </div>
+          <div class="price__save">Экономия 55 000&nbsp;₽</div>
         </div>
 
         <ul class="pricing-card__features">
@@ -789,6 +805,7 @@
     </div>
   </div>
 </section>
+
 
   
   <section id="faq" class="faq" data-block="faq">
