--- a/public/v/b/index.html
+++ b/public/v/b/index.html
@@ -101,7 +101,7 @@
   
   
   
-  <link rel="stylesheet" href="http://localhost:1313/css/bundle-b.min.84fb8a39a2c53df4fe09b91d5de7dcd63d4a6af7d9452e8019e487867866a28d.css" integrity="sha256-hPuKOaLFPfT&#43;CbkdXefc1j1KavfZRS6AGeSHhnhmoo0=">
+  <link rel="stylesheet" href="http://localhost:1313/css/bundle-b.min.4e79f1ffc8fff5fcfc9dad90e94aeee9cf6ea52c37d732f59a928c3b0bf0a3bb.css" integrity="sha256-Tnnx/8j/9fz8na2Q6Uru6c9upSw31zL1mpKMOwvwo7s=">
   
 
   <style>
@@ -449,6 +449,10 @@
     <div class="container">
       <h2 class="section__title">Стоимость</h2>
 
+      <div class="pricing__promo">
+        <span class="pricing__promo-text">Специальная цена на индивидуальные консультации</span>
+      </div>
+
       <div class="pricing__cards">
         <div class="pricing-card">
           <div class="pricing-card__header">
@@ -456,8 +460,14 @@
           </div>
 
           <div class="pricing-card__price">
-            <span class="price__amount">5000</span>
-            <span class="price__currency">&nbsp;₽</span>
+            <div class="price__old">
+              <span class="price__old-amount">10 000</span>
+              <span class="price__old-currency">&nbsp;₽</span>
+            </div>
+            <div class="price__current">
+              <span class="price__amount">5000</span>
+              <span class="price__currency">&nbsp;₽</span>
+            </div>
           </div>
 
           <ul class="pricing-card__features">
@@ -481,9 +491,15 @@
           </div>
 
           <div class="pricing-card__price">
-            <span class="price__amount">45000</span>
-            <span class="price__currency">&nbsp;₽</span>
-            <div class="price__save">Одна сессия в подарок</div>
+            <div class="price__old">
+              <span class="price__old-amount">100 000</span>
+              <span class="price__old-currency">&nbsp;₽</span>
+            </div>
+            <div class="price__current">
+              <span class="price__amount">45000</span>
+              <span class="price__currency">&nbsp;₽</span>
+            </div>
+            <div class="price__save">Экономия 55 000&nbsp;₽</div>
           </div>
 
           <ul class="pricing-card__features">
