--- a/public/v/b/index.html
+++ b/public/v/b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <title>Психолог онлайн — Помощь при тревоге и панических атаках</title>
+  <title>Психолог онлайн — Помощь при тревоге и сильном стрессе</title>
 
   
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -41,7 +41,7 @@
   <meta property="og:image:height" content="630">
   
   <meta property="og:locale" content="ru_RU">
-  <meta property="og:site_name" content="Психолог онлайн — Помощь при тревоге и панических атаках">
+  <meta property="og:site_name" content="Психолог онлайн — Помощь при тревоге и сильном стрессе">
 
   
   <meta name="twitter:card" content="summary_large_image">
@@ -790,7 +790,7 @@
        data-position="floating-nav"
        data-target="faq">
       <span class="floating-nav__item-title">Ответы на вопросы</span>
-      <span class="floating-nav__item-desc">Часто задаваемые вопросы о работе с тревогой и паническими атаками</span>
+      <span class="floating-nav__item-desc">Часто задаваемые вопросы о работе с тревогой и стрессом</span>
     </a>
   </div>
 
@@ -909,7 +909,7 @@
   
   
   
-  <script src="http://localhost:1313/js/quiz.min.ff100a89f62a876fb524ad31d6c0688735096f33d8113379d3e132bca046e500.js" integrity="sha256-/xAKifYqh2&#43;1JK0x1sBohzUJbzPYETN50&#43;EyvKBG5QA="></script>
+  <script src="http://localhost:1313/js/quiz.min.b4c393e8ae07b0e1f01bccd5e65dcfe67b4be5815d4d585f392d39fe76ffe9c0.js" integrity="sha256-tMOT6K4HsOHwG8zV5l3P5ntL5YFdTVhfOS05/nb/6cA="></script>
   
 
   
