--- a/public/v/a/index.html
+++ b/public/v/a/index.html
@@ -184,7 +184,7 @@
   
   
   
-  <link rel="stylesheet" href="http://localhost:1313/css/bundle.min.cf69ca96d65f47286877cb0772e33513de534d89d8d02e20b939fcd67293c47a.css" integrity="sha256-z2nKltZfRyhod8sHcuM1E95TTYnY0C4guTn81nKTxHo=">
+  <link rel="stylesheet" href="http://localhost:1313/css/bundle.min.88a392fe90e32a709cc4f80c9cd806e0fefcb9164dd3a46304e14d3ee2897762.css" integrity="sha256-iKOS/pDjKnCcxPgMnNgG4P78uRZN06RjBOFNPuKJd2I=">
   
 
   
@@ -835,7 +835,7 @@
         <div class="faq-item__answer">
           <p>Абсолютно. Все, что вы рассказываете на сессиях, защищено профессиональной этикой психолога. Я не имею
             права разглашать информацию третьим лицам без вашего письменного согласия.</p>
-          <p>Для общения используем защищенные каналы (мессенджеры Telegram, WhatsApp, любые другие с шифрованием).
+          <p>Для общения используем защищенные каналы (мессенджеры Telegram, WhatsApp, Макс и любые другие с шифрованием).
             Сессии не записываются без вашего разрешения. Даже отзывы публикуются только после вашего явного согласия и
             с сохранением анонимности.</p>
         </div>
@@ -984,7 +984,7 @@
         <svg class="btn__icon" width="28" height="28" viewBox="0 0 24 24" fill="currentColor">
           <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm4.64 6.8c-.15 1.58-.8 5.42-1.13 7.19-.14.75-.42 1-.68 1.03-.58.05-1.02-.38-1.58-.75-.88-.58-1.38-.94-2.23-1.5-.99-.65-.35-1.01.22-1.59.15-.15 2.71-2.48 2.76-2.69a.2.2 0 00-.05-.18c-.06-.05-.14-.03-.21-.02-.09.02-1.49.95-4.22 2.79-.4.27-.76.41-1.08.4-.36-.01-1.04-.2-1.55-.37-.63-.2-1.12-.31-1.08-.66.02-.18.27-.36.74-.55 2.92-1.27 4.86-2.11 5.83-2.51 2.78-1.16 3.35-1.36 3.73-1.36.08 0 .27.02.39.12.1.08.13.19.14.27-.01.06.01.24 0 .38z"/>
         </svg>
-        Написать в Telegram
+        Telegram
       </a>
 
       <a href="https://wa.me/905071754633?text=%D0%97%D0%B4%D1%80%D0%B0%D0%B2%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5%21&#43;%D0%A5%D0%BE%D1%87%D1%83&#43;%D0%B7%D0%B0%D0%BF%D0%B8%D1%81%D0%B0%D1%82%D1%8C%D1%81%D1%8F&#43;%D0%BD%D0%B0&#43;%D0%B2%D0%B2%D0%BE%D0%B4%D0%BD%D1%83%D1%8E&#43;%D0%B2%D1%81%D1%82%D1%80%D0%B5%D1%87%D1%83&#43;%2830&#43;%D0%BC%D0%B8%D0%BD%D1%83%D1%82%29"
@@ -994,7 +994,18 @@
         <svg class="btn__icon" width="28" height="28" viewBox="0 0 24 24" fill="currentColor">
           <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413z"/>
         </svg>
-        Написать в WhatsApp
+        WhatsApp
+      </a>
+
+      <a href="https://max.ru/u/f9LHodD0cOIrBOd9xxxJoTAQU6SNMnjF-xRP5O9a7N2To_Sx1XgRq00hzZQ"
+         class="btn btn--large btn--max"
+         data-cta="max"
+         data-position="final-cta"
+         target="_blank" rel="noopener">
+        <svg class="btn__icon" width="28" height="28" viewBox="0 0 1000 1000" fill="currentColor">
+          <path fill-rule="evenodd" d="M508.211 878.328c-75.007 0-109.864-10.95-170.453-54.75-38.325 49.275-159.686 87.783-164.979 21.9 0-49.456-10.95-91.248-23.36-136.873-14.782-56.21-31.572-118.807-31.572-209.508 0-216.626 177.754-379.597 388.357-379.597 210.785 0 375.947 171.001 375.947 381.604.707 207.346-166.595 376.118-373.94 377.224m3.103-571.585c-102.564-5.292-182.499 65.7-200.201 177.024-14.6 92.162 11.315 204.398 33.397 210.238 10.585 2.555 37.23-18.98 53.837-35.587a189.8 189.8 0 0 0 92.71 33.032c106.273 5.112 197.08-75.794 204.215-181.95 4.154-106.382-77.67-196.486-183.958-202.574Z" clip-rule="evenodd"/>
+        </svg>
+        Макс
       </a>
     </div>
 
@@ -1123,6 +1134,15 @@
             <svg width="32" height="32" viewBox="0 0 24 24" fill="currentColor">
               <path
                 d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413z" />
+            </svg>
+          </a>
+
+          <a href="https://max.ru/u/f9LHodD0cOIrBOd9xxxJoTAQU6SNMnjF-xRP5O9a7N2To_Sx1XgRq00hzZQ"
+            class="social-btn social-btn--max" target="_blank" rel="noopener"
+            aria-label="Написать в Макс"
+            data-cta="max" data-position="footer">
+            <svg width="32" height="32" viewBox="0 0 1000 1000" fill="currentColor">
+              <path fill-rule="evenodd" d="M508.211 878.328c-75.007 0-109.864-10.95-170.453-54.75-38.325 49.275-159.686 87.783-164.979 21.9 0-49.456-10.95-91.248-23.36-136.873-14.782-56.21-31.572-118.807-31.572-209.508 0-216.626 177.754-379.597 388.357-379.597 210.785 0 375.947 171.001 375.947 381.604.707 207.346-166.595 376.118-373.94 377.224m3.103-571.585c-102.564-5.292-182.499 65.7-200.201 177.024-14.6 92.162 11.315 204.398 33.397 210.238 10.585 2.555 37.23-18.98 53.837-35.587a189.8 189.8 0 0 0 92.71 33.032c106.273 5.112 197.08-75.794 204.215-181.95 4.154-106.382-77.67-196.486-183.958-202.574Z" clip-rule="evenodd"/>
             </svg>
           </a>
 
